# automatic-fortnight

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  check.cppcheck  fragment.glsl  toolchain.cmake  vertex.glsl
blocks/: default.mtl  objects.atf
blocks/objects/: cobblestone.mtl  grass.mtl  stone.mtl
shaders/: fragment.glsl  vertex.glsl
src/: Block.c  Block.h  Blocks.c  Blocks.h  Camera.c  Camera.h  Entity.h  GL.c  GL.h  Image.c  Image.h  Input.c  Input.h  Map.c  Map.h  Objects.c  Objects.h  Shader.c  Shader.h  Textures.c  Textures.h  Window.c  Window.h  glad.c  main.c
src/cglm/: affine.c  bezier.c  box.c  cam.c  config.h  curve.c  dllmain.c  ease.c  euler.c  frustum.c  io.c  mat3.c  mat4.c  plane.c  project.c  quat.c  sphere.c  vec3.c  vec4.c
src/include/cglm/: affine-mat.h  affine.h  bezier.h  box.h  call.h  cam.h  cglm.h  color.h  common.h  curve.h  ease.h  euler.h  frustum.h  io.h  mat3.h  mat4.h  plane.h  project.h  quat.h  sphere.h  types.h  util.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h  version.h
src/include/cglm/call/: affine.h  bezier.h  box.h  cam.h  curve.h  ease.h  euler.h  frustum.h  io.h  mat3.h  mat4.h  plane.h  project.h  quat.h  sphere.h  vec3.h  (+1 more)
src/include/stb/: stb.h  stb_c_lexer.h  stb_connected_components.h  stb_divide.h  stb_ds.h  stb_dxt.h  stb_easy_font.h  stb_herringbone_wang_tile.h  stb_image.h  stb_image_resize.h  stb_image_write.h  stb_leakcheck.h  stb_perlin.h  stb_rect_pack.h  stb_sprintf.h  stb_textedit.h  stb_tilemap_editor.h  stb_truetype.h  stb_vorbis.c  stb_voxel_render.h  stretchy_buffer.h
world/: world.map
(+10 files in other folders)
